@@ -1,6 +1,6 @@
 # Copyright 1999-2010 Gentoo Foundation
 # Distributed under the terms of the GNU General Public License v2
-# $Header: /var/cvsroot/gentoo-x86/sci-chemistry/molscript/molscript-2.1.2.ebuild,v 1.5 2010/03/28 09:06:22 jlec Exp $
+# $Header: /var/cvsroot/gentoo-x86/sci-chemistry/molscript/molscript-2.1.2.ebuild,v 1.6 2010/09/16 17:27:21 scarabeus Exp $
 
 inherit toolchain-funcs eutils
 
@@ -15,7 +15,7 @@ IUSE=""
 DEPEND="media-libs/jpeg
 	media-libs/libpng
 	media-libs/gd
-	virtual/glut
+	media-libs/freeglut
 	|| (	x11-libs/libXmu
 			x11-libs/libXext
 			x11-libs/libX11	)"
