@@ -1,6 +1,10 @@
 # ChangeLog for sci-chemistry/molscript
 # Copyright 1999-2010 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /var/cvsroot/gentoo-x86/sci-chemistry/molscript/ChangeLog,v 1.10 2010/06/24 20:55:33 pacho Exp $
+# $Header: /var/cvsroot/gentoo-x86/sci-chemistry/molscript/ChangeLog,v 1.11 2010/09/16 17:27:22 scarabeus Exp $
+
+  16 Sep 2010; Tomáš Chvátal <scarabeus@gentoo.org>
+  molscript-2.1.2.ebuild, molscript-2.1.2-r1.ebuild:
+  virtual/glut -> media-libs/glut
 
   24 Jun 2010; Pacho Ramos <pacho@gentoo.org> molscript-2.1.2-r1.ebuild:
   stable amd64, bug 317711
